force-app/main/default/objects/Travel_Cost__c/Travel_Cost__c.object-meta.xml
<CustomObject>
    <label>Travel Cost</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Travel Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Costs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>