force-app/main/default/objects/Travel_Cost__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Travel Costs</relationshipLabel>
    <relationshipName>Travel_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>