force-app/main/default/objects/Travel_Cost__c/fields/Place_to_Travel__c.field-meta.xml
<CustomField>
    <fullName>Place_to_Travel__c</fullName>
    <label>Place to Travel</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>