force-app/main/default/objects/Travel_Cost__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Year</fullName>
            </value>
            <value>
                <fullName>3 Year</fullName>
            </value>
            <value>
                <fullName>4 Year</fullName>
            </value>
            <value>
                <fullName>5 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>